2001-10-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: Helm of Light provides warmth
	* files/utils.cc: fixed BeOS trailing slash mkdir bug

2001-10-13  Patrick Burke  <takhisisii@yahoo.com.au>
	* data/credits.txt data/quotes.txt: Fixed formatting and ## escape.

2001-10-13  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc: Clone() intrinsic.
	* actors.cc: Clone() added.  Some monsters can split now.
	* monsters.cc: Create() cleaned a bit.

2001-10-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc: fixed face stats disappearing on reload

2001-10-13  Dancer Vesperman  <dancer@users.sourceforge.net>

	* shapes/shapeinf.cc: Fix compile error. istream is in std::

2001-10-13  Dancer Vesperman  <dancer@users.sourceforge.net>

	* actors.cc: NPC_Actor::movef cannot be inline, since it is not in a header and it is referenced from another translation unit.

2001-10-13  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Gamemenu_gump.cc, VideoOptions_gump.cc: recenter gamemenu gump after
	changing resolution in the video options gump

2001-10-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.in: cleaned up some more (especially C++ comp. detection)
	* gamewin.cc: fixed palette glitch in plasma screen
	* contain.cc: 'fixed' urn bug

2001-10-12  Max Horn  <max@quendi.de>
	* configure.in: some cleanup, added some suggestions from autoscan

2001-10-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/*/defaultkeys.txt: fixed abacus keybinding
	* GameplayOptions_gump.cc: cleaned up loading of bg_paperdolls setting
	* cheat_screen.cc: save paperdoll setting here too
	* gamewin.cc: fixed loading of bg_paperdoll setting
	* gamewin.h: added some const's

2001-10-12  Tristan Tarrant <nadir@users.sourceforge.net>
	More patches from Christian Ohm <chr.ohm@gmx.net>
	mouse.patch, gumps/Gameplay_options.* : Implement GameplayOptions 